# altar

./: .gitignore  CMakeLists.txt
src/: main.cpp
